feat: add style to blob form

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blob Maker</title>
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="styles/Styles.css">
 </head>
 <body>
 <div class="wrapper">
