--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@
     <input type="text" id="css-code" readonly>
     <button id="copy">Copy</button>
 </div>
+<!--Script-->
+<script src="scripts/script.js"></script>
 </body>
 </html>
