--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
                 Width
             <input type="number" value="200" id="blob-width">
             </label>
+        <label for="blob-color">
+            Color
+            <input type="color" value="#FF0000" id="blob-color">
+        </label>
     </div>
     <div class="sliders">
         <input type="range" value="30">
